# crewai_demo

my_crew/: pyproject.toml
my_crew/src/my_crew/: crew.py  main.py
my_crew/src/my_crew.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
my_crew/src/my_crew/config/: agents.yaml  tasks.yaml
