[project]
name = "my-crew"
version = "0.1.0"
description = "My CrewAI Demo"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "crewai[tools]~=0.51.1",
  "setuptools~=80.9.0"
]


[project.scripts]
run_crew = "my_crew.main:run"
my_crew = "my_crew.main:run"
train = "my_crew.main:train"
replay = "my_crew.main:replay"
test = "my_crew.main:test"

[build-system]
requires = ["uv", "setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
